<resources>
    <string name="app_name">Practica5</string>
    <string name="rbAsc">Asc</string>
    <string name="rbDesc">Desc</string>
    <string name="order"><![CDATA[a>z]]></string>
    <string name="OK">OK</string>
    <string name="valoravida">Valora Vida</string>
    <string name="fechas">Fechas</string>
    <string name="setting">Ajustes</string>
    <string name="about">Acerca De</string>
    <string name="fechaPorDefecto">--/--/----</string>
    <string name="breveResumen">Breve resumen del dia</string>
    <string name="valoradia">Valorar Dia</string>
    <string name="descripcion">Cuenta a tu diario tu dia...</string>
    <string name="diarioDatabase">diario_database</string>
    <string name="imgNuevo">Imagen botón añadir</string>
    <string name="EditTitulo" type="id">Editando Dia</string>
    <string name="NuevoTitulo" type="id">Nuevo Dia</string>
    <string name="MensajeErrorDia" type="id">Debes de introducir todos los campos antes de guardar el
        proyecto.
    </string>
    <string name="ErrorActivityResult" type="id">No se ha realizado ninguna acción</string>
    <string name="Resumen">Resumen del dia</string>
    <string name="Aviso">Aviso</string>
    <string name="AvisoMsn">¿Está seguro de eliminar esta página del diario?</string>
    <string name="CancelBorrar">No se ha eliminado el dia del diario.</string>
    <string name="ordenarPor">Ordenar por</string>
    <string name="aboutInfo">Práctica 5\n
        V 1.0\n
        Tomás Soler Linares\n
        Licencia CC\n
        (Creative Commons)</string>
    <string name="datosPersonales">Datos personales</string>
    <string name="config">Configuración programa</string>
    <string name="nombreSummary">Con que nombre quieres que nos dirijamos a ti</string>
    <string name="nombreTitle">Cuál es tu nombre</string>
    <string name="fechaPreference">Fecha cumpleaños</string>
    <string name="sexoSummary">Eres un/una...</string>
    <string name="sexoTitle">Eres...</string>
    <string name="avisarDiarioSummay">Desea que le avisemos que tiene que escribir en el diario</string>
    <string-array name="valoracionDia">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="opcionesOrdenar">
        <item>Fecha</item>
        <item>Valoración</item>
        <item>Resumen</item>
    </string-array>
    <string-array name="sexo">
        <item>Chico</item>
        <item>Chica</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avisarDiarioTitle">Avisar escribir en Diario</string>
    <string name="tituloP">"P5 - "</string>
    <string name="nombreGenerico">Nuevo diario</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_intent_preference">intent</string>
    <string name="elegirFoto">Tomar foto</string>
    <string name="elegirGaleria">Elegir de la galería</string>
    <string name="seleccionarImagen">Seleccione una imagen</string>
    <string name="permisosAceptados">Permisos aceptados</string>
    <string name="peticionPermisos">Petición de Permisos</string>
    <string name="peticionPermisosMensaje">Necesito los permisos para seleccionar una foto</string>
    <string name="solicitarPermisos">Necesito los permisos para poder elegir una foto</string>
</resources>