<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EdicionDiaActivity"
    android:id="@+id/clPrincipal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEditDia"
        android:layout_width="390dp"
        android:layout_height="182dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/svDescrpcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivFoto"
                android:layout_width="101dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spnValoraDia"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <EditText
                android:id="@+id/edtBreveResumen"
                android:layout_width="232dp"
                android:layout_height="44dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/breveResumen"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivFoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvValoraDia" />

            <Spinner
                android:id="@+id/spnValoraDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="72dp"
                android:entries="@array/valoracionDia"
                app:layout_constraintBottom_toTopOf="@+id/edtBreveResumen"
                app:layout_constraintEnd_toStartOf="@+id/ivFoto"
                app:layout_constraintStart_toEndOf="@+id/tvValoraDia"
                app:layout_constraintTop_toBottomOf="@+id/ibFecha" />

            <ImageButton
                android:id="@+id/ibFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="90dp"
                app:layout_constraintBottom_toTopOf="@+id/spnValoraDia"
                app:layout_constraintEnd_toStartOf="@+id/ivFoto"
                app:layout_constraintStart_toEndOf="@+id/tvFecha"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_month" />

            <TextView
                android:id="@+id/tvValoraDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valoradia"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/edtBreveResumen"
                app:layout_constraintEnd_toStartOf="@+id/spnValoraDia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibFecha" />

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/fechaPorDefecto"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/tvValoraDia"
                app:layout_constraintEnd_toStartOf="@+id/ibFecha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuardar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ScrollView
        android:id="@+id/svDescrpcion"
        android:layout_width="385dp"
        android:layout_height="566dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvEditDia">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descripcion"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>